added edit, update, and delete to donations

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <a href='/users/donations/new'>Make a Donation</a>
-    <a href='/users/donations'>View Your Donations and Charities</a>
+    <a href='/donations/new'>Make a Donation</a>
+    <a href='/donations'>View Your Donations and Charities</a>
     <a href='/logout'>Logout</a>
 {% endblock %}
