--- a/templates/partials/signup.html
+++ b/templates/partials/signup.html
@@ -4,7 +4,7 @@
             <div class="container">
                 <div class="columns is-centered">
                     <div class="column is-half">
-                        <form method="POST">
+                        <form method="POST" action="/">
                             <div class="field">
                                 <label class="label">Name</label>
                                 <div class="control has-icons-left has-icons-right">
