started to add CRUDing to user

--- a/templates/donations_new.html
+++ b/templates/donations_new.html
@@ -12,6 +12,7 @@
                 <button class='btn btn-primary' type='submit'>Make Donation</button>
             </div>
         </form>
+        <a href="/dashboard">Back to Dashboard</a>
     </div>
 </div>
 {% endblock %}
