--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,5 +4,6 @@
 {% block content %}
     <a href='/donations/new'>Make a Donation</a>
     <a href='/donations'>View Your Donations and Charities</a>
+    <a href='/user'>User Settings</a>
     <a href='/logout'>Logout</a>
 {% endblock %}
