--- a/templates/partials/login.html
+++ b/templates/partials/login.html
@@ -25,7 +25,7 @@
                             </div>
                             <div class="field">
                                 <p class="control">
-                                <button type="submit" class="button is-success">
+                                <button type="submit" class="btn btn-primary">
                                     Login
                                 </button>
                                 </p>
