--- a/templates/partials/signup.html
+++ b/templates/partials/signup.html
@@ -34,7 +34,7 @@
                             </div>
                             <div class="field">
                                 <p class="control">
-                                <button type="submit" class="button is-success">
+                                <button type="submit" class="btn btn-primary">
                                     SignUp
                                 </button>
                                 </p>
