--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
 
 {% block content %}
     <h2 class='text-center mt-4'>Hello {{ user_obj.username }}!</h2>
-    <div class="row justify-content-md-center text-center">
+    <div class="row justify-content-md-center text-center mt-5">
         <div class="col-3 bg-light py-4">
             <h6>Total Contribution</h6>
             <p>$placeholder</p>
@@ -17,8 +17,12 @@
             <p>placeholder</p>
         </div>
     </div>
-    <a href='/donations/new'>Make a Donation</a>
-    <a href='/donations'>View Your Donations and Charities</a>
-    <a href='/user'>User Settings</a>
-    <a href='/logout'>Logout</a>
+    <div class="row mt-5">
+        <div class="container">
+            <div class="col-12 d-flex justify-content-center">
+                <a href='/donations/new' class="btn btn-primary mr-2">Make a Donation</a>
+                <a href='/donations/{{ user._id }}' class="btn btn-primary ml-2">View Your Donations and Charities</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
