--- a/templates/donations_edit.html
+++ b/templates/donations_edit.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class='row'>
+<div class='row d-flex justify-content-center mt-5'>
     <div class='col-sm-6 col-sm-offset-3'>
         <form method='POST' action='/donations/{{ donation._id }}/update'>
             
