--- a/templates/donations_index.html
+++ b/templates/donations_index.html
@@ -1,18 +1,37 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <h1 class='text-center'>Hello {{ user_obj.username }}</h1>
+    <h2 class='text-center mb-5'>Your Donations</h2>
+    <div class='ml-5'>
+        <!-- {% for article_row in articles | batch(3, '&nbsp;') %}
+        <div class="row">
+            {% for article in article_row %}
+            <div class="span4">{{ article }}</div>
+            {% endfor %}
+        </div>
+        {% endfor %} -->
+        {% for donation_row in donations | batch(3, '&nbsp;') %}
+            <div class="row">
+                {% for donation in donation_row %}
+                <div class="span4 m-4">
+                    <h4 class='text-center'>{{ donation.charity }}</h4>
+                    <h8>${{ donation.donation_amnt }}</h8><br>
+                    <small>Your donation was made on {{ donation.created_at }}</small>
+                    <div class="d-flex justify-content-center">
+                        <p><a href='/donations/{{ donation._id }}/edit' class='btn btn-secondary mx-2 mt-3'>Edit</a></p>
+                        <p><form method='POST' action='/donations/{{ donation._id }}/delete'>
+                            <button class='btn btn-secondary mx-2 mt-3' type='submit'>Delete</button>
+                        </form></p>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        {% endfor %}
+    </div>
+    <div class='d-flex justify-content-center mb-4'>
+        <a href="/dashboard" class="btn btn-primary mr-2">Back to Dashboard</a>
+        <a href="/donations/new" class="btn btn-primary ml-2">Make Another Donation</a>
+    </div>
     
-    <h1>Hello {{ user_obj.username }}</h1>
-    <h1>Your Donations</h1>
-    {% for donation in donations %}
-        <h2>{{ donation.charity }}</h2>
-        <small>${{ donation.donation_amnt }}</small><br>
-        <small>Your donation was made on {{ donation.created_at }}</small>
-        <p><a href='/donations/{{ donation._id }}/edit' class='btn btn-primary'>Edit</a></p>
-        <p><form method='POST' action='/donations/{{ donation._id }}/delete'>
-            <button class='btn btn-primary' type='submit'>Delete</button>
-        </form></p>
-    {% endfor %}
-    <a href="/dashboard">Back to Dashboard</a>
-    <a href="/donations/new">Make Another Donation</a>
 {% endblock %}
