--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,16 +5,19 @@
     <h2 class='text-center mt-4'>Hello {{ user_obj.username }}!</h2>
     <div class="row justify-content-md-center text-center mt-5">
         <div class="col-3 bg-light py-4">
-            <h6>Total Contribution</h6>
-            <p>$placeholder</p>
+            <!-- <h6>Total Contribution</h6>
+            <p>$placeholder</p> -->
+            <p>Thank you for making the world a better place!</p>
         </div>
         <div class="col-3 bg-light py-4">
-            <h6>Total Donations</h6>
-            <p>placeholder</p>
+            <!-- <h6>Total Donations</h6>
+            <p>placeholder</p> -->
+            <p>Track your donations below!</p>
         </div>
         <div class="col-3 bg-light py-4">
-            <h6>Total Charities Donated To</h6>
-            <p>placeholder</p>
+            <!-- <h6>Total Charities Donated To</h6>
+            <p>placeholder</p> -->
+            <p>Make a new donation below or in your donation tracker!</p>
         </div>
     </div>
     <div class="row mt-5">
