--- a/templates/donations_edit.html
+++ b/templates/donations_edit.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class='row d-flex justify-content-center mt-5'>
     <div class='col-sm-6 col-sm-offset-3'>
-        <form method='POST' action='/donations/{{ donation._id }}/update'>
+        <form method='POST' action='/donations/{{ user._id }}/{{ donation._id }}/update'>
             
             <input type='hidden' name='_method' value='PUT'/>
             {% include 'partials/donations_form.html' %}
